syntax = "proto3";

package golab2023.users.v1;
import "google/protobuf/timestamp.proto";

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message User {
  int32 id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  repeated string labels = 5;
}

message CreateUserRequest {
  string name = 1;
  repeated string labels = 2;
}

message CreateUserResponse {
  User user = 1;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
  repeated string match_labels = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 totat = 2;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  User user = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}
